[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "roborank-envs"
version = "0.1.0"
description = "Open RoboRank robotics challenge environment catalog."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
roborank-envs = "roborank_envs.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roborank_envs = ["catalog_data.json"]
