[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "roborank"
dynamic = ["version"]
description = "Open RoboRank robotics challenge environment catalog."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
visualization = [
  "mujoco>=3.2.0",
  "rerun-sdk>=0.32.2",
]

[project.scripts]
roborank = "roborank.cli:main"
roborank-envs = "roborank_envs.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roborank_envs = ["catalog_data.json"]

[tool.setuptools_scm]
